--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   border-radius: 10px;
   background: #3a3a3a;
   padding: 20px;
+  position: relative;
 }
 
 input[type="text"] {
@@ -51,6 +52,13 @@ input[type="text"] {
   color: white;
 }
 
+.keys > button:nth-of-type(16) {
+  grid-column: 1/3;
+}
+
 .prev-val {
-  color: white;
+  color: rgb(0, 0, 0);
+  position: absolute;
+  top: 30px;
+  left: 30px;
 }
